# emu

./: .gitignore  README.md  compile.sh  from_web.html  from_web.txt  generate_isa.py  sample.txt
src/: CMakeLists.txt  main.cpp
src/snes/: snes_common.hpp
src/snes/cpu/: 65c816.cpp  isa.cpp  isa_execute.cpp  isa_impl.cpp
src/snes/cpu/inc/: 65c816.hpp  isa.hpp
src/snes/cpu/parse/: ADC_parse.cpp  AND_parse.cpp  ASL_parse.cpp  BCC_parse.cpp  BCS_parse.cpp  BEQ_parse.cpp  BIT_parse.cpp  BMI_parse.cpp  BNE_parse.cpp  BPL_parse.cpp  BRA_parse.cpp  BRK_parse.cpp  BRL_parse.cpp  BVC_parse.cpp  BVS_parse.cpp  CLC_parse.cpp  CLD_parse.cpp  CLI_parse.cpp  CLV_parse.cpp  CMP_parse.cpp  COP_parse.cpp  CPX_parse.cpp  CPY_parse.cpp  DEC_parse.cpp  DEX_parse.cpp  DEY_parse.cpp  EOR_parse.cpp  INC_parse.cpp  INX_parse.cpp  INY_parse.cpp  JMP_parse.cpp  JSL_parse.cpp  JSR_parse.cpp  LDA_parse.cpp  LDX_parse.cpp  LDY_parse.cpp  LSR_parse.cpp  MVN_parse.cpp  MVP_parse.cpp  NOP_parse.cpp  (+51 more)
src/snes/inc/: isa.hpp  isa_impl.hpp  snes_common.hpp  snes_memory.hpp
src/snes/memory/: snes_memory.cpp
src/snes/memory/inc/: memory.hpp  snes_memory.hpp
src/snes/processor/: instruction.cpp
src/snes/processor/inc/: instruction.hpp  proc.hpp
src/util/: common.hpp  logger.cpp  logger.hpp
src/window/: window.cpp  window.hpp
src/window/inc/: window.hpp
